@@ -1,3 +1,7 @@
+2002-02-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkchat.tcl: correct warnings that procheck noted.
+
 2002-02-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: noise reduction from the last patch for timeout
